added a page for changing profile data

--- a/bboard/main/templates/layout/basic.html
+++ b/bboard/main/templates/layout/basic.html
@@ -22,7 +22,7 @@
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" >Профиль</а> 
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="{% url 'main:profile' %}">Moи объявления</а>
-                    <a class="dropdown-item" href="#">Изменить личные данные</а>
+                    <a class="dropdown-item" href="{% url 'main:profile_change' %}">Изменить личные данные</а>
                     <a сlass="dropdown-item" href="#">Изменить пароль</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'main:logout' %}">Выйти</а>
