--- a/bboard/main/templates/layout/basic.html
+++ b/bboard/main/templates/layout/basic.html
@@ -23,7 +23,7 @@
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="{% url 'main:profile' %}">Moи объявления</а>
                     <a class="dropdown-item" href="{% url 'main:profile_change' %}">Изменить личные данные</а>
-                    <a сlass="dropdown-item" href="#">Изменить пароль</a>
+                    <a сlass="dropdown-item" href="{% url 'main:password_change' %}">Изменить пароль</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'main:logout' %}">Выйти</а>
                 </div>
