add password reset

--- a/bboard/main/templates/main/register_done.html
+++ b/bboard/main/templates/main/register_done.html
@@ -1,7 +1,7 @@
 {% extends "layout/basic.html" %}
 {% block title %}Регистрация завершена{% endblock %}
 {% block content %}
-    <h2>PerncTpaunn</h2>
+    <h2>Регистрация</h2>
     <р>Регистрация пользователя завершена.</р>
     <р>На адрес электронной почты, указанный пользователем, выслано письмо 
     для активации.</р>
