--- a/bboard/main/templates/layout/basic.html
+++ b/bboard/main/templates/layout/basic.html
@@ -4,48 +4,57 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>{% block title %} Главная {% endblock %} - Доска объявлений </title>
+        <meta name="viewport"
+        content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>{% block title %}Главная{% endblock %} - Доска
+        объявлений</title>
         {% bootstrap_css %}
-        <link rel="stylesheet" type="text/css" href="{% static 'main/style.css' %}" > 
-        {% bootstrap_javascript jquery='slim' %} 
+        <link rel="stylesheet" type="text/css"
+        href="{% static 'main/style.css' %}">
+        {% bootstrap_javascript jquery='slim' %}
     </head>
-        <body class="container-fluid">
-            <header class="mb-4">
-                <h1 class="display-1 text-center">Объявления</h1>
-            </header>
-            <div class="row">
+    <body class="container-fluid">
+        <header class="mb-4">
+            <h1 class="display-1 text-center">Объявления</h1>
+        </header>
+        <div class="row">
             <ul class="col nav justify-content-end border">
-            <li class="nav-item"><a class="nav-link" href="{% url 'main:register' %}">Регистрация</a></li>
-            {% if user.is_authenticated %}
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" >Профиль</а> 
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="{% url 'main:profile' %}">Moи объявления</а>
-                    <a class="dropdown-item" href="{% url 'main:profile_change' %}">Изменить личные данные</а>
-                    <a сlass="dropdown-item" href="{% url 'main:password_change' %}">Изменить пароль</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{% url 'main:logout' %}">Выйти</а>
-                    <div class="dropdown-divider"></div>
-                    <a сlass="dropdown-item" href="{% url 'main:profile_delete' %}">Удалить</a>
-                </div>
-            </li>
-            {% else %}
-            <li class="nav-item"><a class="nav-link" href="{% url 'main:login' %}">Bxoд</a></li>
-            {% endif %}
+                <li class="nav-item"><a class="nav-link"
+                href="{% url 'main:register' %}">Регистрация</a></li>
+                {% if user.is_authenticated %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown"
+                    href="#" role="button" aria-haspopup="true"
+                    aria-expanded="false">Профиль</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="{% url 'main:profile' %}">Мои объявления</a>
+                        <a class="dropdown-item" href="{% url 'main:profile_change' %}">Изменить личные
+                        данные</a>
+                        <a class="dropdown-item" href="{% url 'main:password_change' %}">Изменить пароль</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'main:logout' %}">Выйти</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'main:profile_delete' %}">Удалить</a>
+                    </div>
+                </li>
+                {% else %}
+                <li class="nav-item"><a class="nav-link" href="{% url 'main:login' %}">Вход</a></li>
+                {% endif %}
             </ul>
-            </div>
-                <div class='row'>
-                <nav class="col-md-auto nav flex-column border">
-                <a class="nav-link root" href="{% url 'main:index' %}">Главная</а>
+        </div>
+        <div class="row">
+            <nav class="col-md-auto nav flex-column border">
+                <a class="nav-link root"
+                href="{% url 'main:index' %}">Главная</a>
                 <span class="nav-link root font-weight-bold">Heдвижимость</span>
                 <a class="nav-link" href="#">Жилье</a>
                 <a class="nav-link" href="#">Склады</а>
                 <a class="nav-link" href="#">Гаражи</а>
-                <span class="nav-link root font-weight-bold" href="#">Транспорт</span>
+                <span class="nav-link root font-weight-bold">Транспорт</span>
                 <a class="nav-link" href="#">Легковой</a>
                 <a class="nav-link" href="#">Грузовой</a>
-                <a class="nav-link root" href="{% url 'main:other' page='about' %}"> О сайте</а>
+                <a class="nav-link root" 
+                href="{% url 'main:other' page='about' %}"> О сайте</а>
                 </nav>
                 <section class="col border py-2">
                 {% bootstrap_messages %}
