--- a/bboard/main/templates/main/profile.html
+++ b/bboard/main/templates/main/profile.html
@@ -1,5 +1,5 @@
 {% extends 'layout/basic.html' %}
-{% block title %}Профиль пользователя!{% endblock %}
+{% block title %}Профиль пользователя{% endblock %}
 {% block content %}
 <h2>Профиль пользователя {{ user.username }}</h2>
 {% if user.first_name and user.last_name %}
